<resources>
    <string name="app_name" translatable="false">AMR</string>
    <string name="exception_3d_error">3D摄像头异常</string>
    <string name="exception_check_charge_point_count_error">检测到%1$s充电桩数量为%2$d,为确保机器重定位正常,请删除多余充电桩</string>
    <string name="exception_check_charge_point_position_error">检测到在自动路线模式(网页端-标定位置页面)所标充电桩和固定路线模式(导航路线页面)所标充电桩位置偏差过大,请确保两种模式所标充电桩在同一位置,以确保机器重定位功能正常</string>
    <string name="exception_check_more_than_one_enter_elevator_point">检测到%1$d个进梯点</string>
    <string name="exception_check_more_than_one_inside_elevator_point">检测到%1$d个乘梯点</string>
    <string name="exception_check_more_than_one_leave_elevator_point">检测到%1$d个出梯点</string>
    <string name="exception_check_more_than_one_waiting_elevator_point">检测到%1$d个候梯点</string>
    <string name="exception_close_door_failed">发送关门指令失败</string>
    <string name="exception_close_door_failed_task_finished">关门失败,任务结束,请检查门控接线</string>
    <string name="exception_connect_mqtt_failed">mqtt连接超时,请检查机器人网络.</string>
    <string name="exception_door_control_model_disconnected_task_finished">门控模块离线,重连失败,任务结束</string>
    <string name="exception_elevator_not_found">机器人未绑定到电梯，请工作人员检查梯控平台确认机器人与梯控平台的电梯的绑定关系。</string>
    <string name="exception_elevator_offline">因梯控网关不在线而无法正常调度电梯，请按以下步骤排查问题：\n第一步，请工作人员登录梯控网关确认梯控网关是否正常上网且已正常连接梯控平台；\n第二步，若第一步没问题，请联系梯控平台方案厂家获取支持.</string>
    <string name="exception_get_thing_id_failed">获取实例id失败,请检查该机器是否在梯控平台完成绑定</string>
    <string name="exception_imu_error">IMU故障</string>
    <string name="exception_json_syntax_exception">解析乘梯请求响应失败,请联系工作人员排查.</string>
    <string name="exception_laser_error">激光异常</string>
    <string name="exception_map_not_legal">地图%1$s非法:</string>
    <string name="exception_navigation_to_enter_elevator_point_timeout">前往进梯点超时,取消乘梯任务失败</string>
    <string name="exception_navigation_to_leave_elevator_point_timeout">前往出梯点超时,任务结束</string>
    <string name="exception_navigation_to_leave_elevator_point_timeout_and_cancel_take_elevator_task_failed">前往出梯点超时,取消乘梯失败,任务结束</string>
    <string name="exception_navigation_to_take_elevator_point_timeout">前往乘梯点超时,任务结束</string>
    <string name="exception_navigation_to_take_elevator_point_timeout_and_cancel_take_elevator_task_failed">前往乘梯点超时,取消本次乘梯失败,任务结束</string>
    <string name="exception_no_elevator_available">未找到合适的电梯给机器人，建议联系按以下步骤排查问题:\n第一步，请工作人员登录梯控平台确保梯控机器人已绑定到电梯、确保梯控网关已经绑定到电梯；\n第二步，确认梯控平台配置的电梯最低楼层和最高楼层与实际相符；\n第三步，若第一、二步都没问题，请联系梯控平台方案厂家获取支持。</string>
    <string name="exception_not_mark_charge_point_in_mark_point_page">检测到未在自动路线模式(网页端-标定位置页面)下标定充电桩,为确保机器自动重定位功能正常使用,请在自动路线模式下标定与固定路线模式同样位置的充电桩</string>
    <string name="exception_not_mark_enter_elevator_point">未标定进梯点</string>
    <string name="exception_not_mark_inside_elevator_point">未标定乘梯点</string>
    <string name="exception_not_mark_leave_elevator_point">未标定出梯点</string>
    <string name="exception_not_mark_waiting_elevator_point">未标定候梯点</string>
    <string name="exception_open_door_failed">发送开门指令失败</string>
    <string name="exception_open_door_failed_task_finished">开门失败,任务结束,请检查门控模块接线</string>
    <string name="exception_parse_mqtt_host_failed">解析mqtt host失败,请联系工作人员.</string>
    <string name="exception_request_io_exception">乘梯请求失败,请检查机器人网络.</string>
    <string name="exception_response_body_null">乘梯请求错误,请联系工作人员排查.</string>
    <string name="exception_ros_error">ROS系统异常</string>
    <string name="exception_speedometer_error">里程计异常</string>
    <string name="exception_subscribe_failed">订阅mqtt失败,请联系工作人员排查.</string>
    <string name="exception_thing_not_online">梯控网关离线,请联系技术支持人员排查.</string>
    <string name="exception_unknown_exception">乘梯请求失败,请联系工作人员排查.</string>
    <string name="exception_waiting_elevator_timeout">等待电梯超时,请联系工作人员处理</string>
    <string name="text_ac_charging">适配器充电中</string>
    <string name="text_add_point">添加点位</string>
    <string name="text_after_work_time">下班时间 : %1$s</string>
    <string name="text_agv_dock_failed">agv对接中,导航失败</string>
    <string name="text_air_shower_door_count_down_time_must_longer_than_three">风淋门停留时长不能小于3秒</string>
    <string name="text_air_shower_door_count_down_time_setting">风淋门停留时长设置</string>
    <string name="text_alias_input_type">别名长度不能小于5个字符,可以输入中文,字母,数字,-和_</string>
    <string name="text_alias_setting">别名设置</string>
    <string name="text_already_binding_point">已绑定点位</string>
    <string name="text_already_exit_calling_pairing">已退出配对模式</string>
    <string name="text_already_through_door_and_count_down">已通过门: %1$s,倒计时结束后继续任务</string>
    <string name="text_android_ip">安卓系统IP:%1$s</string>
    <string name="text_android_wifi">安卓系统WiFi:%1$s</string>
    <string name="text_android_wifi_connect_success">Android网络连接成功,是否连接ROS WiFi?</string>
    <string name="text_android_wifi_connect_time_out">安卓网络连接超时</string>
    <string name="text_anti_collision_strip_switch">防撞条开关</string>
    <string name="text_apk_file_not_exist">找不到应用升级包,升级失败</string>
    <string name="text_apk_info">升级包信息:</string>
    <string name="text_app_id_error_cannot_check_upgrade">应用ID错误,无法检查更新</string>
    <string name="text_app_ver">应用版本:%1$s</string>
    <string name="text_app_version">应用版本</string>
    <string name="text_application_crash">应用程序崩溃了</string>
    <string name="text_application_upgrade">应用升级</string>
    <string name="text_apply_default_map_failed">设置默认楼层失败:\n</string>
    <string name="text_arrive_at_door_back">到达%1$s门后,正在关门...</string>
    <string name="text_arrive_at_door_front">到达%1$s门前,正在开门...</string>
    <string name="text_arrived">到达:%1$s</string>
    <string name="text_auto_charge_level_must_bigger_than_working_power_level">自动充电电量必须比自动工作电量小至少10%</string>
    <string name="text_auto_lift_down">自动顶升放下</string>
    <string name="text_auto_lift_up">自动顶升抬起</string>
    <string name="text_auto_model">自动路线导航模式</string>
    <string name="text_auto_work_setting">自动工作电量</string>
    <string name="text_back">返回</string>
    <string name="text_backgroud_music_file_corrupted">背景音乐文件已损坏</string>
    <string name="text_background_download">后台下载</string>
    <string name="text_basic_setting">基本设置</string>
    <string name="text_behind">后 :</string>
    <string name="text_bind">开始绑定</string>
    <string name="text_bind_failed">绑定失败 : %1$s</string>
    <string name="text_bind_success">绑定成功</string>
    <string name="text_brightness_setting">屏幕亮度</string>
    <string name="text_button_num">按键编号</string>
    <string name="text_call_elevator">正在呼叫电梯</string>
    <string name="text_call_elevator_inside_success">电梯内呼梯成功,正在等待电梯到达目标楼层</string>
    <string name="text_call_elevator_now">马上呼梯</string>
    <string name="text_call_elevator_success">呼叫电梯成功,正在等待电梯到达</string>
    <string name="text_calling_bind">呼叫任务模式</string>
    <string name="text_calling_cache_time">呼叫点位缓存时间(单位 : 分钟)</string>
    <string name="text_calling_config">呼叫模块配置</string>
    <string name="text_calling_count">呼叫次数</string>
    <string name="text_calling_key_same">秘钥已存在,无需重复保存</string>
    <string name="text_calling_key_setting">秘钥设置</string>
    <string name="text_calling_model_reconnect_failed">呼叫模块重连失败,请重新拔插模块后重启应用</string>
    <string name="text_calling_model_reconnect_success">呼叫模块重连成功</string>
    <string name="text_calling_model_reconnecting">检测到呼叫模块掉线,正在重连</string>
    <string name="text_calling_pairing">配对设置</string>
    <string name="text_calling_points">呼叫列表</string>
    <string name="text_calling_waiting_time">呼叫点位停留时间(单位 : 秒)</string>
    <string name="text_cancel">取消</string>
    <string name="text_cancel_recycle">取消任务</string>
    <string name="text_cannot_arrive_this_target">目标无法到达，请检查路径设置是否合理</string>
    <string name="text_cannot_dock_when_charging">检测到机器人正在充电,无法对接充电桩</string>
    <string name="text_cannot_dock_when_emergency_button_down">检测到急停开关被按下,无法对接充电桩</string>
    <string name="text_cannot_pause_during_lifting">正在顶升,无法暂停任务</string>
    <string name="text_cannot_pause_during_qrcode_navigation">正在对接标签码,无法暂停任务</string>
    <string name="text_cannot_pause_during_switch_map">正在切换地图,无法暂停任务</string>
    <string name="text_cannot_pause_during_take_elevator">机器人乘梯期间请不要点击屏幕</string>
    <string name="text_cannot_pause_during_through_door">正在通过门控区,无法暂停任务</string>
    <string name="text_cannot_switch_map_during_task_executing">检测到地图切换,任务结束</string>
    <string name="text_change">修改</string>
    <string name="text_changing_map">正在切换地图,请稍候...</string>
    <string name="text_charging_pile_map_setting">设置充电桩所在地图</string>
    <string name="text_check_altitude_moving">检查到顶升模块上次动作未完成,请点击确认按钮使顶升模块复位</string>
    <string name="text_check_altitude_moving_click_confirm_to_continue">检查到顶升模块上次动作未完成,请点击确认按钮以完成上次动作</string>
    <string name="text_check_altitude_up">检测到顶升模块抬起,请点击确认按钮使顶升模块复位</string>
    <string name="text_check_apply_map_please_reload_points">检测到地图切换,请检查机器定位后重新加载点位</string>
    <string name="text_check_can_not_leave_elevator">无法生成出梯路线,倒计时结束后重试</string>
    <string name="text_check_first_and_last_lift_point_has_same_action">检测到任务中第一个顶升点和最后一个顶升点动作相同,无法设置任务结束重新开始路线巡航或任务循环执行</string>
    <string name="text_check_lifting">检测到上次顶升动作未完成,请先完成顶升动作</string>
    <string name="text_check_map_list">正在检查地图,请稍候...</string>
    <string name="text_check_not_connect_network_cannot_take_elevator">检测到安卓网络未连接,无法乘梯,任务结束</string>
    <string name="text_check_not_connect_to_outside_network_cannot_take_elevator">检测到安卓未连接到设置的梯外网络,无法乘梯,任务结束</string>
    <string name="text_check_not_input_alias_will_use_hostname">检测到未输入别名,点击[确认]按钮将使用机器编号作为别名</string>
    <string name="text_check_not_open_waiting_time">检测到未打开停留倒计时开关,无法设置停留时间</string>
    <string name="text_check_not_open_waiting_time_cannot_set_play_arrived_tip_time">检测到未打开停留倒计时开关,无法设置点位到达提示播放时长</string>
    <string name="text_check_only_one_lift_point">检测到只有一个顶升点,无法设置任务结束重新开始路线巡航或任务循环执行</string>
    <string name="text_check_open_manual_lift_down_but_lift_model_is_up">请先点击顶升抬起按钮</string>
    <string name="text_check_open_manual_lift_up_but_lift_model_is_down">请先点击顶升降下按钮</string>
    <string name="text_check_other_robot_take_elevator">检测到其他机器人正在乘梯,倒计时结束后重试</string>
    <string name="text_check_point_lift_down_but_lift_model_already_down">检测到点位%1$s设置顶升动作为顶升放下,当前顶升模块处于低位状态,无法开始任务</string>
    <string name="text_check_point_lift_up_but_lift_model_already_up">检测到点位%1$s设置顶升动作为顶升抬起,当前顶升模块处于高位状态,无法开始任务</string>
    <string name="text_check_position_error">检测到机器定位异常,请检查机器人定位</string>
    <string name="text_check_sensor_state_error_cannot_use_application">检测到传感器状态异常,%1$s,无法使用本应用,请联系技术支持人员修复该问题后再重新启动本应用</string>
    <string name="text_check_time_out_error">自检失败,超时未检测到ROS开机,请检查机器人定位后再使用</string>
    <string name="text_check_update">检查更新</string>
    <string name="text_check_version_already_last">已经是最新版了</string>
    <string name="text_check_waiting_time_too_short_cannot_set_play_arrived_time">检测到点位停留倒计时过短,无法设置点位到达提示播放时长</string>
    <string name="text_check_wheel_state_error_cannot_use_application">检测到轮子状态异常,状态码:%1$s,无法使用本应用,请联系技术支持人员修复该问题后再重新启动本应用</string>
    <string name="text_confirm">确认</string>
    <string name="text_current_map">当前地图:%1$s</string>
    <string name="text_delete_all">删除所有按键</string>
    <string name="text_download_process">下载进度: %1$s</string>
    <string name="text_exit">退出</string>
    <string name="text_navigation_version">导航版本</string>
    <string name="text_not_select_point">未选择点位</string>
    <string name="text_point_name">点位名称</string>
    <string name="text_power_board_ver">电源板版本</string>
    <string name="text_power_board_version">电源板版本:%1$s</string>
    <string name="text_robot_info">机器人信息</string>
    <string name="text_ros_ip">导航系统IP:%1$s</string>
    <string name="text_ros_version">导航系统版本:%1$s</string>
    <string name="text_ros_wifi">导航系统WiFi:%1$s</string>
    <string name="text_save">保存</string>
    <string name="text_select_point">选择点位</string>
    <string name="text_skip">跳过</string>
    <string name="text_upgrade">升级</string>
    <string name="text_wifi_auth">WiFi身份认证</string>
    <string name="text_wifi_name">请输入WiFi名称</string>
    <string name="text_wifi_password">请输入WiFi密码</string>
</resources>