<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="horizontal"
    tools:context=".activities.CallingConfigActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_selected_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_not_select_point"
            android:textSize="@dimen/sp28" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minWidth="400dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_select_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_common_button"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/text_select_point"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="30sp" />


            <Button
                android:id="@+id/btn_bind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_common_button"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/text_bind"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_delete_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_common_button"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/text_delete_all"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_common_button"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/text_exit"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/color_split_line" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp20"
            android:gravity="center"
            android:text="@string/text_already_binding_point"
            android:textSize="@dimen/sp30" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/text_button_num"
                android:textSize="@dimen/sp26" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/text_point_name"
                android:textSize="@dimen/sp26" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_already_binding_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10" />


    </LinearLayout>


</LinearLayout>