<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="400dp"
        android:hint="@string/text_alias_input_type">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_alias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="400dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:minWidth="400dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_config_button"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/text_save"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_config_button"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/text_skip"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_config_button"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/text_exit"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

    </LinearLayout>


</LinearLayout>