<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp20"
        android:paddingTop="@dimen/dp15"
        android:paddingEnd="@dimen/dp20">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/dp10"
            android:paddingBottom="@dimen/dp10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_app_version"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp20" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:background="@drawable/bg_setting_item"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_app_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp10"
                    android:paddingTop="@dimen/dp15"
                    android:paddingRight="@dimen/dp10"
                    android:paddingBottom="@dimen/dp15"
                    android:textColor="#777"
                    android:textSize="@dimen/sp20" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/dp10"
            android:paddingBottom="@dimen/dp10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_navigation_version"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp20" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:background="@drawable/bg_setting_item"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_navigation_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp10"
                    android:paddingTop="@dimen/dp15"
                    android:paddingRight="@dimen/dp10"
                    android:paddingBottom="@dimen/dp15"
                    android:textColor="#777"
                    android:textSize="@dimen/sp20" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/dp10"
            android:paddingBottom="@dimen/dp10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_power_board_ver"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp20" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:background="@drawable/bg_setting_item"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_power_board_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp10"
                    android:paddingTop="@dimen/dp15"
                    android:paddingRight="@dimen/dp10"
                    android:paddingBottom="@dimen/dp15"
                    android:textColor="#777"
                    android:textSize="@dimen/sp20" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/dp10"
            android:paddingBottom="@dimen/dp10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_application_upgrade"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp20" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:background="@drawable/bg_setting_item"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_check_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_common_button_active"
                    android:text="@string/text_check_update"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp20"
                    />

                <Button
                    android:id="@+id/btn_download_process"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp20"
                    android:background="@drawable/bg_common_button_active"
                    android:text="@string/text_download_process"
                    android:visibility="gone"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp20"
                    />

                <Button
                    android:id="@+id/btn_upgrade"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp20"
                    android:background="@drawable/bg_common_button_active"
                    android:text="@string/text_upgrade"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp20"
                    />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</ScrollView>